--- a/toDoList/src/App.css
+++ b/toDoList/src/App.css
@@ -31,6 +31,22 @@
 
 table {
   margin: auto;
+  border-collapse: collapse;
+}
+
+td{
+  border-bottom: 1px solid #888;
+  padding: 2px 2em;
+}
+
+
+header {
+  background-color: black;
+  color: white;
+}
+
+h3 {
+  text-align: center;
 }
 
 .add {
@@ -38,3 +54,21 @@ table {
   border: 3px solid transparent;
   cursor: pointer;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.box {
+  width: 100%;
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+
